# AlmaAPITK

./: .gitignore  AGENTIC_RUN_LOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  alma_client_test.py  client.py  guardrails.json  mkdocs.yml  pyproject.toml  smoke-data.example.json  test_script.py
.a5c/issue-finalization/: issues-with-comments.json
.a5c/processes/: acquisitions-extraction.js  almaapitk-documentation-inputs.json  almaapitk-documentation.diagram.md  almaapitk-documentation.js  almaapitk-documentation.process.md  chunk-template-impl.js  chunk-test.js  cleanup-runs-inputs.json  coverage-finishing.mjs  html-dashboard-impl-inputs.json  html-dashboard-impl.js  issue-finalization-inputs.json  issue-finalization.js  phase-b1-inputs.json  phase-b1-public-api.js  phase-b2-internal-namespace.js  phase-c-dependency-api-completion.js  phase-d-pilot-migration.js  phase-e-project-extraction.js  phase-f-packaging.diagram.md  phase-f-packaging.js  phase-f-packaging.process.md  phase-g-inputs.json  phase-g-rs-extraction.js  pypi-publish-0.3.0-inputs.json  pypi-publish-0.3.0.diagram.md  pypi-publish-0.3.0.js  pypi-publish-0.3.0.process.md  release-0.4.0-inputs.json  release-0.4.0.js  release-0.4.x-issue-followups-inputs.json  release-0.4.x-issue-followups.js  release-0.4.x-review-inputs.json  release-0.4.x-review.js  security-audit-issue-rollout-inputs.json  security-audit-issue-rollout.js  tdd-analytics-domain-inputs.json  tdd-analytics-domain.diagram.md  tdd-analytics-domain.js  tdd-analytics-domain.process.md  (+8 more)
.claude/: settings.json
.claude/commands/: chunk-run-impl.md  chunk-run-test.md
.github/workflows/: ci.yml  docs.yml  release.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
chunks/bibs-marc-fixes/: manifest.json  status.json  test-recommendation.json  test-results.json
chunks/chunk-pipeline-docs-coupling/: _swagger_errors_93.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/client-ergonomics/: _swagger_errors_13.json  _swagger_errors_16.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/config-bootstrap/: _swagger_errors_22.json  manifest.json  status.json  test-recommendation.json
chunks/config-grab-bag-1/: _swagger_errors_30.json  _swagger_errors_33.json  _swagger_errors_35.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/config-orgs-and-locations/: _swagger_errors_24.json  _swagger_errors_25.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/config-sets/: _swagger_errors_23.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/config-tables/: _swagger_errors_26.json  _swagger_errors_27.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/create-record-from-fields/: manifest.json  status.json  test-recommendation.json  test-results.json
chunks/electronic-bootstrap/: manifest.json  status.json  test-recommendation.json  test-results.json
chunks/errors-mapping/: manifest.json  status.json  test-recommendation.json  test-results.json
chunks/http-retry/: manifest.json  status.json  test-recommendation.json  test-results.json
chunks/http-session-and-request/: manifest.json  status.json  test-data.json  test-recommendation.json  test-results.json
chunks/http-timeout-and-region/: manifest.json  status.json  test-recommendation.json  test-results.json
chunks/pagination-helper/: _swagger_errors_11.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/raw-request-passthrough/: manifest.json  status.json
chunks/release-quality-cluster/: manifest.json  status.json  test-recommendation.json
chunks/rs-borrowing-ergonomics/: manifest.json  status.json  test-recommendation.json  test-results.json
chunks/users-crud/: _swagger_errors_37.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/users-grab-bag-1/: _swagger_errors_39.json  _swagger_errors_44.json  _swagger_errors_45.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/users-list-and-search/: _swagger_errors_36.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/users-loans/: _swagger_errors_40.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/users-notes/: manifest.json  status.json  test-recommendation.json
chunks/users-requests/: _swagger_errors_41.json  manifest.json  status.json  test-recommendation.json  test-results.json
chunks/users-requests-followup/: manifest.json  status.json  test-data.example.json  test-recommendation.json
client/: alma_api_client.py
config/: logging_config.example.json
core/: base_client.py  config_manager.py  logger_manager.py
docs/: AGENTIC_ORCHESTRATION_HANDBOOK.md  AGENTIC_RUN_LOG.md  API_CONTRACT.md  Alma Borrowing Request API Guide.md  CHUNK_BACKLOG.md  CHUNK_PLAYBOOK.md  ISSUE_PIPELINE.md  RELEASE_CHECKLIST.md  _config.yml  api-reference.md  chunks-backlog.yaml  error-handling.md  examples.md  getting-started.md  index.md  issue-audit-2026-05-01.md  issue-audit-2026-05-01_codex_direct.txt  issue-finalization-report-2026-05-01.md  logging.md  quality-report.md  regression-coverage-audit-2026-06-03.md  requirements.txt  run-history-insights.md  security-audit-2026-05-20.md  security-audit-issue.md  session-handoff-2026-05-13.md  session-handoff-2026-05-27.md
docs/alma-swagger/: README.md  acq.fetched.json  acq.json  analytics.fetched.json  analytics.json  bibs.fetched.json  bibs.json  conf.fetched.json  conf.json  courses.fetched.json  courses.json  electronic.fetched.json  electronic.json  partners.fetched.json  partners.json  users.fetched.json
docs/alma_logging/: LOGGING_IMPLEMENTATION_PLAN.md  LOG_VIEWER_GUIDE.md  (+1 more)
scripts/: check-secrets-in-staged.sh  env-status  file_coverage_issues.py  install-git-hooks.sh  smoke_import.py  update_prereqs.py
tests/: README.md  test_public_api_contract.py  test_version.py
(+286 files in other folders)
