[project]
name = "almaapitk"
version = "0.4.6"
description = "Python toolkit for the Ex Libris Alma ILS API"
authors = [
    {name = "Hagay Bar", email = "hagaybar@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = [
    "alma",
    "ils",
    "library",
    "api",
    "ex-libris",
    "acquisitions",
    "cataloging",
    "resource-sharing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed"
]
dependencies = [
    "requests>=2.32.0,<3.0.0"
]

[project.optional-dependencies]
# Install with: pip install almaapitk[smoke]
# Pulls the test runner used by the workflow smoke-test harness
# (almaapitk.testing). Kept out of the core install so normal users
# don't pay for pytest.
smoke = ["pytest>=8.0.0,<9.0.0"]

# Install with: pip install almaapitk[pymarc]
# Enables BibliographicRecords.create_record_from_pymarc (issue #179).
# Optional so the core install pulls no MARC dependency; the pymarc
# adapter imports it lazily and raises a clear error when absent.
pymarc = ["pymarc>=5.0.0"]

# Auto-load the `alma` fixture when almaapitk[smoke] is installed —
# consumers get the harness fixture without writing a conftest.
[project.entry-points.pytest11]
almaapitk_smoke = "almaapitk.testing.pytest_plugin"

[project.urls]
Homepage = "https://github.com/hagaybar/AlmaAPITK"
Repository = "https://github.com/hagaybar/AlmaAPITK"
Documentation = "https://hagaybar.github.io/AlmaAPITK/"
Issues = "https://github.com/hagaybar/AlmaAPITK/issues"
Changelog = "https://github.com/hagaybar/AlmaAPITK/blob/main/CHANGELOG.md"

[tool.poetry]
packages = [{ include = "almaapitk", from = "src" }]
include = [
    { path = "README.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "docs/releases/0.3.1.md", format = "sdist" },
]
exclude = [
    "tests/**",
    "scripts/**",
    "docs/**",
    "logs/**",
    "backups/**",
    ".a5c/**",
    "config/**",
    "AGENTS.md",
    "CLAUDE.md",
    "CLAUDE_tmp.html",
    "ALMA_DIGITAL_DOCUMENTATION_EVALUATION.md",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
